--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,27 +1,7 @@
 version: 2
 updates:
-
-  # Maintain dependencies for pip
   - package-ecosystem: "pip"
-    directory: "/app/backend"
-    schedule:
-      interval: "daily"
-    groups:
-      python-requirements:
-        patterns:
-          - "*"
-
-  - package-ecosystem: "pip"
-    directory: "/scripts"
-    schedule:
-      interval: "daily"
-    groups:
-      python-requirements:
-        patterns:
-          - "*"
-
-  - package-ecosystem: "pip"
-    directory: "/"
+    directory: "/*"
     schedule:
       interval: "daily"
     groups:
